# Scrapy_peviitor_jobs

./: .gitignore  README.md  apiUpdateFiles.py  import_files.py  info_project.txt  pyproject.toml  requirements.txt
.github/workflows/: scrapy_run_crawlers.yml  scrapy_run_crawls.yml  updateApi.yml
JobsCrawlerProject/: 00_main_run_crawlers.py  __create_template.py  delete_api_data.py  main_run_crawlers.py  scrapy.cfg  test.py
JobsCrawlerProject/JobsCrawlerProject/: __requests__.py  found_county.py  items.py  middlewares.py  pipelines.py  settings.py  update_peviitor_api.py
JobsCrawlerProject/JobsCrawlerProject/spiders/: amach_spider.py  arkadium_spider.py  aurachain_spider.py  bittnet_spider.py  boomi_spider.py  centric_spider.py  complyadvantage_spider.py  jobspoint.py  (+44 more)
spiders/: __main_runner_spiders.py  amach_spider.py  arkadium_spider.py  aurachain_spider.py  bittnet_spider.py  complyadvantage_spider.py  creativechaos_spider.py  cristim_spider.py  digitain_spider.py  ding_spider.py  edgeless_spider.py  epam_spider.py  ewor_spider.py  flashnet_spider.py  fortisgames_spider.py  globant_spider.py  google_spider.py  griddynamics_spider.py  heimdal_spider.py  hutchinson_spider.py  jobspoint.py  kadra_spider.py  kinaxis_spider.py  lilt_spider.py  moveos_spider.py  neobytesolutions_spider.py  ninjaone_spider.py  phipartners_spider.py  play_solutions_spider.py  roweb_spider.py  rscrds_spider.py  scania_spider.py  signicat_spider.py  sustainalytics_spider.py  suvoda_spider.py  teamland_spider.py  tecknoworks_spider.py  tesla_spider.py  testronic_spider.py  valeo_spider.py  (+2 more)
(+13 files in other folders)
