[tool.poetry]
name = "scrapy-peviitor-jobs"
version = "0.1.0"
description = "This project is part 2 of jobs scrapers with python3, on Scrapy."
authors = ["andreireporter13 <andrei.reporter13@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrapy_peviitor_jobs"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
playwright = "^1.36.0"
scrapy-playwright = "^0.0.28"
uuid = "^1.30"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
